Bug 504662 - crash when using the "Create Data Spreadsheet" feature
Summary: crash when using the "Create Data Spreadsheet" feature
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.12.0
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
: 507708 507885 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-05-22 11:03 UTC by dpap
Modified: 2025-08-05 20:01 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.12.1
Sentry Crash Report:


Attachments
sample csv to import (636 bytes, text/csv)
2025-05-22 11:03 UTC, dpap
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dpap 2025-05-22 11:03:21 UTC
Created attachment 181647 [details]
sample csv to import

SUMMARY
crash when using the "Create Data Spreadsheet" feature

STEPS TO REPRODUCE
1. Import a csv with a timeseries (attaching a sample csv with 40 rows, size does not matter though)
2. On the project Explorer, right click on the spreadsheet > Analyze and Plot Data > Integrate (or Smooth etc)
3. Click the Plot button
4. Right click on the resulting curve and select "Create Data Spreadsheet".

OBSERVED RESULT
Labplot crashes after a few seconds.

EXPECTED RESULT
A new spreadsheet with the analyzed data is created.

SOFTWARE/OS VERSIONS
Windows: 11 Enterprise 10.0.26100 Build 26100
Comment 1 dpap 2025-05-22 11:05:32 UTC
I forgot to mention that the crash occurs *every* time you use the "Create Data Spreadsheet" feature.
Comment 2 victor 2025-05-23 07:53:55 UTC
Hi, I have the same problem: if I process a curve (differenciate, integrate, ....), a new curve is created but when tried to to generate the corresponding data spreadsheet, the program crashes. Bests, Victor
Comment 3 victor 2025-05-23 07:58:33 UTC
Added remark: I haven this problem on version labplot2.11
Comment 4 Alexander Semke 2025-05-26 20:54:30 UTC
Git commit acbb0d5d5492212c9c58cb167b6ade0a36da3788 by Alexander Semke.
Committed on 26/05/2025 at 20:54.
Pushed by asemke into branch 'master'.

Don't crash when creating the data spreadsheet for analysis curves.
FIXED-IN: 2.12.1

M  +3    -0    src/backend/spreadsheet/Spreadsheet.cpp
M  +60   -1    tests/analysis/common/CommonAnalysisTest.cpp
M  +2    -1    tests/analysis/common/CommonAnalysisTest.h

https://invent.kde.org/education/labplot/-/commit/acbb0d5d5492212c9c58cb167b6ade0a36da3788
Comment 5 Alexander Semke 2025-05-26 20:57:06 UTC
(In reply to dpap from comment #0)
> [...]
> OBSERVED RESULT
> Labplot crashes after a few seconds.
Thank you a lot for reporting this issue! We'll make the fix for it available with the next patch release that we plan to do in a couple of weeks.
Comment 6 Stefan Gerlach 2025-06-08 16:33:25 UTC
Git commit 78051f4b998f92f5b2f8ccb2df817aae6257e516 by Stefan Gerlach, on behalf of Alexander Semke.
Committed on 26/05/2025 at 21:02.
Pushed by sgerlach into branch 'release/2.12'.

Don't crash when creating the data spreadsheet for analysis curves.
FIXED-IN: 2.12.1

M  +3    -0    src/backend/spreadsheet/Spreadsheet.cpp
M  +60   -1    tests/analysis/common/CommonAnalysisTest.cpp
M  +2    -1    tests/analysis/common/CommonAnalysisTest.h

https://invent.kde.org/education/labplot/-/commit/78051f4b998f92f5b2f8ccb2df817aae6257e516
Comment 7 Alexander Semke 2025-08-02 10:34:07 UTC
*** Bug 507708 has been marked as a duplicate of this bug. ***
Comment 8 Alexander Semke 2025-08-05 20:01:51 UTC
*** Bug 507885 has been marked as a duplicate of this bug. ***