Don't crash when creating the data spreadsheet for analysis curves.

BUG: 504662
FIXED-IN: 2.12.1