tests/analysis/common/CommonAnalysisTest.cpp
@@ -318,7 +318,6 @@ void CommonAnalysisTest::dataImportRecalculationAnalysisCurveColumnDependency() 
 	project.addChild(ws);
 
 	auto* p = new CartesianPlot(QStringLiteral("plot"));
-	p->setType(CartesianPlot::Type::TwoAxes); // Otherwise no axis are created
 	QVERIFY(p != nullptr);
 	ws->addChild(p);
 
@@ -407,6 +406,66 @@ void CommonAnalysisTest::dataImportRecalculationAnalysisCurveColumnDependency() 
 		VALUES_EQUAL(yColumn->valueAt(3), yColumn->valueAt(2) + 13.);
 		VALUES_EQUAL(yColumn->valueAt(4), yColumn->valueAt(3) + 14.5);
 	}
+}
+
+void CommonAnalysisTest::createDataSpreadsheet() {
+	Project project;
+	auto* ws = new Worksheet(QStringLiteral("Worksheet"));
+	QVERIFY(ws != nullptr);
+	project.addChild(ws);
+
+	auto* p = new CartesianPlot(QStringLiteral("plot"));
+	QVERIFY(p != nullptr);
+	ws->addChild(p);
+
+	// Generate data and
+	Spreadsheet* sheet = new Spreadsheet(QStringLiteral("Spreadsheet"), false);
+	project.addChild(sheet);
+	sheet->setColumnCount(2);
+	sheet->setRowCount(11);
+	sheet->column(0)->setColumnMode(AbstractColumn::ColumnMode::Double);
+	sheet->column(1)->setColumnMode(AbstractColumn::ColumnMode::Double);
+
+	{
+		QVector<double> xData = {1, 2, 3, 4};
+		QVector<double> yData = {1., 2., 3., 4.};
+		sheet->column(0)->replaceValues(0, xData);
+		sheet->column(1)->replaceValues(0, yData);
+	}
+
+	QCOMPARE(sheet->column(0)->name(), QStringLiteral("1"));
+	QCOMPARE(sheet->column(1)->name(), QStringLiteral("2"));
+
+	p->addChild(new XYIntegrationCurve(QLatin1String("eq2")));
+	auto integrationCurves = p->children(AspectType::XYIntegrationCurve);
+	QCOMPARE(integrationCurves.count(), 1);
+	auto* integrationCurve = static_cast<XYIntegrationCurve*>(integrationCurves.at(0));
+
+	integrationCurve->setXDataColumn(sheet->column(0));
+	integrationCurve->setYDataColumn(sheet->column(1));
+
+	// prepare the integration
+	XYIntegrationCurve::IntegrationData integrationData = integrationCurve->integrationData();
+	integrationCurve->setIntegrationData(integrationData);
+
+	// perform the integration
+	integrationCurve->recalculate();
+
+	// create the data spreadsheet and check its values
+	integrationCurve->createDataSpreadsheet();
+	const auto* dataSpreadsheet = project.children<Spreadsheet>().last();
+	const auto* col1 = dataSpreadsheet->column(0);
+	const auto* col2 = dataSpreadsheet->column(1);
+
+	VALUES_EQUAL(col1->valueAt(0), 1.);
+	VALUES_EQUAL(col1->valueAt(1), 2.);
+	VALUES_EQUAL(col1->valueAt(2), 3.);
+	VALUES_EQUAL(col1->valueAt(3), 4.);
+
+	VALUES_EQUAL(col2->valueAt(0), 0.);
+	VALUES_EQUAL(col2->valueAt(1), 1.5);
+	VALUES_EQUAL(col2->valueAt(2), 4.);
+	VALUES_EQUAL(col2->valueAt(3), 7.5);
 }
 
 QTEST_MAIN(CommonAnalysisTest)
